--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.8"
 
 services:
   fastapi_app:
-    build: .
+    build:
+      context: .
+    image: fastapi_app_image
     container_name: fastapi_app
     ports:
       - "8000:8000"
@@ -12,6 +14,8 @@ services:
       interval: 30s
       timeout: 5s
       retries: 3
+    networks:
+      - monitoring
 
   nginx:
     image: nginx:latest
@@ -22,3 +26,41 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - fastapi_app
+    networks:
+      - monitoring
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - monitoring
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - monitoring
+
+  jenkins_master:
+    image: jenkins/jenkins:lts
+    container_name: jenkins_master
+    ports:
+      - "8080:8080"
+    volumes:
+      - jenkins_data:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - monitoring
+    restart: always
+
+networks:
+  monitoring:
+
+volumes:
+  jenkins_data:
